refactor(lotto): List 인터페이스로 교체